# dev-toolkit

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  MIGRATION.md  README.md
bash/common/: repo_env.sh  repo_lib.sh
claude-dotfiles/: README.md  deploy.sh
claude-dotfiles/agents/: README.md
claude-dotfiles/config/: README.md  settings.json
claude-dotfiles/rules/: writing-style.md
claude-dotfiles/scripts/: README.md  refresh-github-mcp.sh  scrub_claude_config.py
designs/okta/: PRR_for_Okta.md  README.md  (+1 more)
iam/: cedar_workload_authorization.md  cross_pod_authentication_and_authorization.md  identity_turn_up.md  jwt_issuance.md  k8s.md  spire_workload_identity.md  zanzibar.md
k8s/: README.md  communication-and-lifecycles.md  control-plane.md  data-plane.md  extension-points-guide.md  glossary.md
nist_policy_machine/: Kubernetes Policy Architecture  nist_policy_machine_summary.md
src/grpc-sample/rust/server/: Cargo.toml
src/grpc-sample/rust/server/proto/: hello.proto
src/grpc-sample/rust/server/src/: main.rs
src/lint/: .flake8  (+8 more)
src/todo_tracker/: Cargo.toml  default_config.toml  run.sh  validate.sh
src/todo_tracker/src/: ci.rs  cli.rs  config.rs  lib.rs  main.rs
src/todo_tracker/src/git/: blame.rs  diff.rs  mod.rs
src/todo_tracker/src/model/: mod.rs  priority.rs  todo.rs
src/todo_tracker/src/scanner/: comment.rs  extractor.rs  mod.rs  walker.rs
src/todo_tracker/src/storage/: cache.rs  database.rs  mod.rs
src/todo_tracker/tests/: integration_test.rs
src/todo_tracker/tests/fixtures/: sample.go  sample.js  sample.py  sample.rs
(+187 files in other folders)
