[package]
name = "todo_tracker"
version = "0.1.0"
edition = "2021"
description = "Track TODO comments across your codebase"

[lib]
name = "todo_tracker"
path = "src/lib.rs"

[[bin]]
name = "todo"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Regex
regex = "1"
once_cell = "1"

# Performance
rayon = "1.8"
ignore = "0.4"
memmap2 = "0.9"

# Storage
rusqlite = { version = "0.31", features = ["bundled"] }

# Git
gix = { version = "0.63", default-features = false, features = ["basic", "extras"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Output
colored = "2"
csv = "1.3"

# Error handling
anyhow = "1"
thiserror = "1"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
