[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net"] }
tonic = "0.9"
hyper = "0.14"
tokio-stream = { version = "0.1", features = ["net"] }
prost = "0.11"

[build-dependencies]
tonic-build = "0.9"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net"] }
tempfile = "3.3"
hyper = "0.14"